--- a/package.json
+++ b/package.json
@@ -1,30 +1,21 @@
 {
-  "name": "folkline3",
-  "version": "1.0.0",
-  "private": true,
-  "main": "index.js",
-  "scripts": {
-    "web": "webpack serve --config ./webpack.config.js --mode development --open",
-    "build:web": "webpack --config ./webpack.config.js --mode production",
-    "deploy": "gh-pages -d dist"
-  },
-  "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native-web": "^0.19.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/preset-react": "^7.24.7",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-react-native-web": "^0.21.2",
-    "copy-webpack-plugin": "^12.0.2",
-    "file-loader": "^6.2.0",
-    "gh-pages": "^6.1.1",
-    "html-webpack-plugin": "^5.6.0",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
-  }
+"name": "folkline3",
+"version": "1.0.0",
+"private": true,
+"homepage": "https://sabrinagiulia2008-byte.github.io/folkline3",
+"scripts": {
+"start": "react-scripts start",
+"build": "react-scripts build",
+"predeploy": "npm run build",
+"deploy": "gh-pages -d build"
+},
+"dependencies": {
+"react": "18.2.0",
+"react-dom": "18.2.0",
+"react-router-dom": "6.14.1"
+},
+"devDependencies": {
+"gh-pages": "^4.0.0",
+"react-scripts": "5.0.1"
+}
 }
