--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-"name": "folkline3",
-"version": "1.0.0",
-"private": true,
-"homepage": "https://sabrinagiulia2008-byte.github.io/folkline3",
-"scripts": {
-"start": "react-scripts start",
-"build": "react-scripts build",
-"predeploy": "npm run build",
-"deploy": "gh-pages -d build"
-},
-"dependencies": {
-"react": "18.2.0",
-"react-dom": "18.2.0",
-"react-router-dom": "6.14.1"
-},
-"devDependencies": {
-"gh-pages": "^4.0.0",
-"react-scripts": "5.0.1"
-}
+  "name": "folkline3",
+  "version": "1.0.0",
+  "private": true,
+  "homepage": "https://sabrinagiulia2008-byte.github.io/folkline31",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.14.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "react-scripts": "5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
